--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,16 +3,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.taobao.top</groupId>
-  <artifactId>top-link</artifactId>
+  <properties>
+    <groupId>com.taobao.top</groupId>
+    <artifactId>top-link</artifactId>
+    <finalName>${project.build.finalName}</finalName>
+  </properties>
+
+  <groupId>${groupId}</groupId>
+  <artifactId>${artifactId}</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>top link</name>
+  <name>top-link</name>
   <url>http://open.taobao.com</url>
-
-  <properties>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -26,6 +29,14 @@
       <groupId>io.netty</groupId>
       <artifactId>netty</artifactId>
       <version>3.5.7.Final</version>
+    </dependency>
+
+    <!--spring-support-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+      <version>2.5.6.SEC02</version>
+      <scope>provided</scope>
     </dependency>
                         
   </dependencies>
@@ -42,10 +53,29 @@
             <configuration>
               <sources>
                 <source>external/RemotingProtocolParser/java/src/main/java</source>
+                <source>spring-support/main</source>
+              </sources>
+            </configuration>
+          </execution>
+          <execution>
+            <id>add-test</id>
+            <phase>generate-sources</phase>
+            <goals><goal>add-test-source</goal></goals>
+            <configuration>
+              <sources>
+                <source>spring-support/test</source>
               </sources>
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3.2</version>
+          <configuration>
+            <finalName>${finalName}</finalName>             
+         </configuration>
       </plugin>
     </plugins>
     <pluginManagement>
