--- a/java/pom.xml
+++ b/java/pom.xml
@@ -17,6 +17,17 @@
   <name>top-link</name>
   <url>http://open.taobao.com</url>
 
+   <distributionManagement>
+      <repository>
+         <id>releases</id>
+         <url>http://mvnrepo.taobao.ali.com/mvn/releases</url>
+      </repository>
+      <snapshotRepository>
+         <id>snapshots</id>
+         <url>http://mvnrepo.taobao.ali.com/mvn/snapshots</url>
+      </snapshotRepository>
+   </distributionManagement>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
