--- a/java/pom.xml
+++ b/java/pom.xml
@@ -49,6 +49,13 @@
       <version>2.5.6.SEC02</version>
       <scope>provided</scope>
     </dependency>
+    <!--more logging-->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+      <scope>provided</scope>
+    </dependency>
                         
   </dependencies>
 
