--- a/java/pom.xml
+++ b/java/pom.xml
@@ -56,7 +56,28 @@
       <version>1.2.17</version>
       <scope>provided</scope>
     </dependency>
-                        
+                  
+    <!--embedded-websocket-->
+    <!--websocket-client test-->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.8.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>1.4.9</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>1.4.9</version>
+      <scope>test</scope>
+    </dependency>
+    
   </dependencies>
 
   <build>
@@ -72,6 +93,8 @@
               <sources>
                 <source>external/RemotingProtocolParser/java/src/main/java</source>
                 <source>spring-support/main</source>
+                <source>external/websocket-client/src/main/java</source>
+                <source>embedded-websocket/main</source>
               </sources>
             </configuration>
           </execution>
@@ -82,6 +105,8 @@
             <configuration>
               <sources>
                 <source>spring-support/test</source>
+                <source>external/websocket-client/src/test/java</source>
+                <source>embedded-websocket/test</source>
               </sources>
             </configuration>
           </execution>
