--- a/java/pom.xml
+++ b/java/pom.xml
@@ -49,6 +49,7 @@
       <version>2.5.6.SEC02</version>
       <scope>provided</scope>
     </dependency>
+
     <!--more logging-->
     <dependency>
       <groupId>log4j</groupId>
@@ -83,6 +84,7 @@
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
       <version>1.1.31</version>
+      <scope>provided</scope>
     </dependency>
     
   </dependencies>
@@ -103,6 +105,7 @@
                 <source>external/websocket-client/src/main/java</source>
                 <source>embedded-websocket/main</source>
                 <source>remoting/main</source>
+                <source>logging</source>
               </sources>
             </configuration>
           </execution>
