--- a/csharp/src/Taobao.Top.Link.Test/Taobao.Top.Link.Test.csproj
+++ b/csharp/src/Taobao.Top.Link.Test/Taobao.Top.Link.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4989E149-3A5D-406D-9A42-F4DC3F3950F4}</ProjectGuid>
+    <ProjectGuid>{061B2353-31C0-4F84-BABE-842163BCDFF9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Taobao.Top.Link</RootNamespace>
-    <AssemblyName>Taobao.Top.Link</AssemblyName>
+    <RootNamespace>Taobao.Top.Link.Test</RootNamespace>
+    <AssemblyName>Taobao.Top.Link.Test</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,39 +30,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\packages\NUnit\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Channel\ChannelContext.cs" />
-    <Compile Include="Channel\ClientChannelSharedSelector.cs" />
-    <Compile Include="Channel\IChannelSender.cs" />
-    <Compile Include="Channel\IClientChannel.cs" />
-    <Compile Include="Channel\IClientChannelSelector.cs" />
-    <Compile Include="Channel\WebSocket\WebSocketClient.cs" />
-    <Compile Include="Channel\WebSocket\WebSocketClientChannel.cs" />
-    <Compile Include="Channel\WebSocket\WebSocketClientHelper.cs" />
-    <Compile Include="LinkException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Remoting\DynamicProxy.cs" />
-    <Compile Include="Remoting\MethodCall.cs" />
-    <Compile Include="Remoting\MethodReturn.cs" />
-    <Compile Include="Remoting\Protocol\RemotingTcpHeaders.cs" />
-    <Compile Include="Remoting\Protocol\RemotingTcpProtocolHandle.cs" />
-    <Compile Include="Remoting\Protocol\RemotingTransportHeader.cs" />
+    <Compile Include="WebSocketChannelTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\external\RemotingProtocolParser\csharp\RemotingProtocolParser\RemotingProtocolParser-Core.csproj">
-      <Project>{c9063e8a-5f48-4c2e-a89c-031c53e75918}</Project>
-      <Name>RemotingProtocolParser-Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\external\websocket-sharp\websocket-sharp\websocket-sharp.csproj">
       <Project>{b357bac7-529e-4d81-a0d2-71041b19c8de}</Project>
       <Name>websocket-sharp</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Channel\TCP\" />
-    <Folder Include="Endpoint\" />
+    <ProjectReference Include="..\Taobao.Top.Link\Taobao.Top.Link.csproj">
+      <Project>{4989e149-3a5d-406d-9a42-f4dc3f3950f4}</Project>
+      <Name>Taobao.Top.Link</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
