--- a/csharp/src/Taobao.Top.Link/Taobao.Top.Link.csproj
+++ b/csharp/src/Taobao.Top.Link/Taobao.Top.Link.csproj
@@ -49,11 +49,17 @@
     <Compile Include="LinkException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remoting\DynamicProxy.cs" />
+    <Compile Include="Remoting\ISerializationFactory.cs" />
+    <Compile Include="Remoting\ISerializer.cs" />
     <Compile Include="Remoting\MethodCall.cs" />
     <Compile Include="Remoting\MethodReturn.cs" />
     <Compile Include="Remoting\Protocol\RemotingTcpHeaders.cs" />
     <Compile Include="Remoting\Protocol\RemotingTcpProtocolHandle.cs" />
     <Compile Include="Remoting\Protocol\RemotingTransportHeader.cs" />
+    <Compile Include="Remoting\RemotingCallback.cs" />
+    <Compile Include="Remoting\RemotingException.cs" />
+    <Compile Include="Remoting\RemotingHandler.cs" />
+    <Compile Include="Remoting\SynchronizedRemotingCallback.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\RemotingProtocolParser\csharp\RemotingProtocolParser\RemotingProtocolParser-Core.csproj">
