add remotingservice for c# easy use;update doc

--- a/csharp/src/Taobao.Top.Link/Taobao.Top.Link.csproj
+++ b/csharp/src/Taobao.Top.Link/Taobao.Top.Link.csproj
@@ -52,6 +52,7 @@
     <Compile Include="LinkException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remoting\DynamicProxy.cs" />
+    <Compile Include="Remoting\RemotingService.cs" />
     <Compile Include="Remoting\Serialization\ISerializationFactory.cs" />
     <Compile Include="Remoting\Serialization\ISerializer.cs" />
     <Compile Include="Remoting\MethodCall.cs" />
