#56;#15;buildIn .net Rmoting call java test with jsonFormatterSink

--- a/csharp/src/Taobao.Top.Link.Test/Taobao.Top.Link.Test.csproj
+++ b/csharp/src/Taobao.Top.Link.Test/Taobao.Top.Link.Test.csproj
@@ -34,6 +34,7 @@
       <HintPath>..\..\packages\NUnit\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Remoting" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DynamicProxyTest.cs" />
