--- a/csharp/src/Taobao.Top.Link/Taobao.Top.Link.csproj
+++ b/csharp/src/Taobao.Top.Link/Taobao.Top.Link.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Remoting\RemotingHandler.cs" />
     <Compile Include="Remoting\Serialization\Json\CrossLanguageJsonSerializer.cs" />
     <Compile Include="Remoting\Serialization\Json\CrossLanguageSerializationFactory.cs" />
+    <Compile Include="Remoting\Serialization\Json\JsonClientFormatterSinkProvider.cs" />
     <Compile Include="Remoting\SynchronizedRemotingCallback.cs" />
     <Compile Include="ResetableTimer.cs" />
     <Compile Include="Text.cs" />
