#64; update c# endpoint protocol match to v1.1.1

--- a/csharp/src/Taobao.Top.Link.Test/Taobao.Top.Link.Test.csproj
+++ b/csharp/src/Taobao.Top.Link.Test/Taobao.Top.Link.Test.csproj
@@ -41,6 +41,7 @@
     <Compile Include="EndpointTest.cs" />
     <Compile Include="InteropeTest.cs" />
     <Compile Include="JsonSerializerTest.cs" />
+    <Compile Include="MessageIOTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebSocketChannelTest.cs" />
   </ItemGroup>
