--- a/java/pom.xml
+++ b/java/pom.xml
@@ -7,11 +7,12 @@
     <groupId>com.taobao.top</groupId>
     <artifactId>top-link</artifactId>
     <finalName>${project.build.finalName}</finalName>
+    <dateVersion></dateVersion>
   </properties>
 
   <groupId>${groupId}</groupId>
   <artifactId>${artifactId}</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.1.1${dateVersion}-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>top-link</name>
